fix spacing on map legend - override antd css

--- a/src/Covid19Dashboard/ControlPanel/ControlPanel.less
+++ b/src/Covid19Dashboard/ControlPanel/ControlPanel.less
@@ -8,3 +8,7 @@
   background: #fff;
   box-shadow: 0 2px 4px rgba(0,0,0,0.3);
 }
+
+.control-panel > * {
+  margin-bottom: 0;
+}
