--- a/src/Covid19Dashboard/ControlPanel/LegendPanel/LegendPanel.less
+++ b/src/Covid19Dashboard/ControlPanel/LegendPanel/LegendPanel.less
@@ -1,4 +1,8 @@
 .legend-panel__item {
+  margin-bottom: 0;
+}
+
+.legend-panel__item span {
   display: inline-block;
   width: 10px;
   height: 10px;
